force-app/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Account - CX</fullName>
            </value>
            <value>
                <fullName>Key Account - GX</fullName>
            </value>
            <value>
                <fullName>Non Key Client</fullName>
                <default>true</default>
                <label>Non Key Client</label>
            </value>
            <value>
                <fullName>Apex Chambers</fullName>
            </value>
            <value>
                <fullName>Bilateral Chamber</fullName>
            </value>
            <value>
                <fullName>Sectoral Chamber</fullName>
            </value>
            <value>
                <fullName>Regional &amp; Other Chamber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>