force-app/main/default/objects/Account/fields/AchievementvsTarget__c.field-meta.xml
<CustomField>
    <fullName>AchievementvsTarget__c</fullName>
    <label>Achievement vs Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>