force-app/main/default/objects/Account/fields/ActionTaken__c.field-meta.xml
<CustomField>
    <fullName>ActionTaken__c</fullName>
    <label>Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>