force-app/main/default/objects/Account/fields/Average_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Average_Recovery__c</fullName>
    <formula>( ClosedWonAmount__c  -  TotalExpenses__c ) /  ClosedWonAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Recovery%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>