force-app/main/default/objects/Account/fields/Business_Overview__c.field-meta.xml
<CustomField>
    <fullName>Business_Overview__c</fullName>
    <label>Business Overview</label>
    <type>TextArea</type>
</CustomField>