force-app/main/default/objects/Account/fields/ClientStatus__c.field-meta.xml
<CustomField>
    <fullName>ClientStatus__c</fullName>
    <description>This field will describe the status of Client.</description>
    <inlineHelpText>This field will describe the status of Client.</inlineHelpText>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>