force-app/main/default/objects/Account/fields/Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Company_Overview__c</fullName>
    <label>Company Overview</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>