force-app/main/default/objects/Account/fields/Domestic_Ultimate_Owner__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Owner__c</fullName>
    <label>Domestic Ultimate Owner</label>
    <length>24</length>
    <type>Text</type>
</CustomField>