force-app/main/default/objects/Account/fields/Domestic_Ultimate_Owner_DUO__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Owner_DUO__c</fullName>
    <label>Domestic Ultimate Owner (DUO)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>