force-app/main/default/objects/Account/fields/Earnings_Before_Interest_and_Taxes_EBIT__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Before_Interest_and_Taxes_EBIT__c</fullName>
    <label>Earnings Before Interest and Taxes EBIT</label>
    <length>24</length>
    <type>Text</type>
</CustomField>