force-app/main/default/objects/Account/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>Earnings Before Interest, Tax, Depreciation &amp; Amortization (EBITDA)</description>
    <label>EBITDA</label>
    <length>24</length>
    <type>Text</type>
</CustomField>