force-app/main/default/objects/Account/fields/Formerly_known_as_2__c.field-meta.xml
<CustomField>
    <fullName>Formerly_known_as_2__c</fullName>
    <label>Formerly known as (2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>