force-app/main/default/objects/Account/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <label>Gross Profit</label>
    <type>TextArea</type>
</CustomField>