force-app/main/default/objects/Account/fields/GTClientGroupNameForSalesforce__c.field-meta.xml
<CustomField>
    <fullName>GTClientGroupNameForSalesforce__c</fullName>
    <label>GT Client Group Name For Salesforce</label>
    <length>100</length>
    <type>Text</type>
</CustomField>