force-app/main/default/objects/Account/fields/HQAddressGUO__c.field-meta.xml
<CustomField>
    <fullName>HQAddressGUO__c</fullName>
    <label>HQ Address - GUO</label>
    <type>Address</type>
</CustomField>