force-app/main/default/objects/Account/fields/HQLocationGUO__c.field-meta.xml
<CustomField>
    <fullName>HQLocationGUO__c</fullName>
    <label>HQ Location - GUO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>