force-app/main/default/objects/Account/fields/IdentificationNoGUO__c.field-meta.xml
<CustomField>
    <fullName>IdentificationNoGUO__c</fullName>
    <label>Identification No (GUO)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>