force-app/main/default/objects/Account/fields/ListedUnlisted__c.field-meta.xml
<CustomField>
    <fullName>ListedUnlisted__c</fullName>
    <label>Listed/Unlisted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Listed</fullName>
            </value>
            <value>
                <fullName>Unlisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>