force-app/main/default/objects/Account/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <label>Net Income</label>
    <length>24</length>
    <type>Text</type>
</CustomField>