force-app/main/default/objects/Account/fields/NewClientGroupNameDUO__c.field-meta.xml
<CustomField>
    <fullName>NewClientGroupNameDUO__c</fullName>
    <label>New Client Group Name (DUO)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>