force-app/main/default/objects/Account/fields/NewClientGroupNameGUO__c.field-meta.xml
<CustomField>
    <fullName>NewClientGroupNameGUO__c</fullName>
    <label>New Client Group Name (GUO)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>