force-app/main/default/objects/Account/fields/NewClientNameCIN_LLP_IDNoOthers__c.field-meta.xml
<CustomField>
    <fullName>NewClientNameCIN_LLP_IDNoOthers__c</fullName>
    <label>New Client Name (CIN / LLP ID No/Others)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>