force-app/main/default/objects/Account/fields/NFCGrowth__c.field-meta.xml
<CustomField>
    <fullName>NFCGrowth__c</fullName>
    <label>NFC Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>