force-app/main/default/objects/Account/fields/PEVCInvestors__c.field-meta.xml
<CustomField>
    <fullName>PEVCInvestors__c</fullName>
    <label>PE/ VC Investors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>