force-app/main/default/objects/Account/fields/PrimaryIndustry__c.field-meta.xml
<CustomField>
    <fullName>PrimaryIndustry__c</fullName>
    <label>Primary Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>