force-app/main/default/objects/Account/fields/ProposedClientOwner__c.field-meta.xml
<CustomField>
    <fullName>ProposedClientOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients5</relationshipName>
    <type>Lookup</type>
</CustomField>