force-app/main/default/objects/Account/fields/Public_Private_Company__c.field-meta.xml
<CustomField>
    <fullName>Public_Private_Company__c</fullName>
    <label>Public/Private Company ?</label>
    <length>24</length>
    <type>Text</type>
</CustomField>