force-app/main/default/objects/Account/fields/RCCApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>RCCApprovedDate__c</fullName>
    <label>RCC Approved Date</label>
    <type>Date</type>
</CustomField>