force-app/main/default/objects/Account/fields/RCCPassedOn__c.field-meta.xml
<CustomField>
    <fullName>RCCPassedOn__c</fullName>
    <label>RCC Passed On</label>
    <type>Date</type>
</CustomField>