force-app/main/default/objects/Account/fields/RCCStatus__c.field-meta.xml
<CustomField>
    <fullName>RCCStatus__c</fullName>
    <formula>CASE( RCCCurrentStatus__c ,
&quot;Pass&quot;,IMAGE(&quot;/resource/1663234066000/Pass?&quot;, &quot;RCC_Pass&quot;),
&quot;Not Initiated&quot;,IMAGE(&quot;/resource/1663234344000/NotInitiated?&quot;, &quot;RCC_NI&quot;),
&quot;In Progress&quot;,IMAGE(&quot;/resource/1663234374000/InProgress?&quot;, &quot;RCC_IP&quot;),
&quot;Conflict&quot;,IMAGE(&quot;/resource/1663234046000/Conflict?&quot;, &quot;RCC_Conf&quot;),
IMAGE(&quot;/resource//resource/1663234344000/NotInitiated?&quot;, &quot;RCC_NI&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It will show , &apos;Completed or Pending&apos; RCC status for this Client.</inlineHelpText>
    <label>RCC Status</label>
    <type>Text</type>
</CustomField>