force-app/main/default/objects/Account/fields/Recovery__c.field-meta.xml
<CustomField>
    <fullName>Recovery__c</fullName>
    <formula>( ClosedWonAmount__c   -   TotalExpenses__c  )/   ClosedWonAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recovery%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>