force-app/main/default/objects/Account/fields/Relationship_Partner__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients4</relationshipName>
    <type>Lookup</type>
</CustomField>