force-app/main/default/objects/Account/fields/Revenue_in_Cr__c.field-meta.xml
<CustomField>
    <fullName>Revenue_in_Cr__c</fullName>
    <label>Revenue (in Cr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>