force-app/main/default/objects/Account/fields/ShareCapitalInCr__c.field-meta.xml
<CustomField>
    <fullName>ShareCapitalInCr__c</fullName>
    <label>Share Capital (In Cr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>