force-app/main/default/objects/Account/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <label>Sub Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Defined</fullName>
            </value>
            <value>
                <fullName>GLOBAL CAPITAL MARKETS</fullName>
            </value>
            <value>
                <fullName>INDIA INBOUND INVESTMENT</fullName>
            </value>
            <value>
                <fullName>CROSS BORDER TRANSACTIONS</fullName>
            </value>
            <value>
                <fullName>DOMESTIC CAPITAL MARKET</fullName>
            </value>
            <value>
                <fullName>INTERNATIONAL BUSINESS EXPANSION</fullName>
            </value>
            <value>
                <fullName>ENTERPRENEURIAL SERVICES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>