force-app/main/default/objects/Account/fields/SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>SubmissionDate__c</fullName>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>