force-app/main/default/objects/Account/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>Total Assets</label>
    <length>24</length>
    <type>Text</type>
</CustomField>