force-app/main/default/objects/Account/fields/Total_Current_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Current_Liabilities__c</fullName>
    <label>Total Current Liabilities</label>
    <length>24</length>
    <type>Text</type>
</CustomField>