force-app/main/default/objects/Account/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <label>Total Debt</label>
    <type>TextArea</type>
</CustomField>