force-app/main/default/objects/Account/fields/Total_Equity__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity__c</fullName>
    <label>Total Equity</label>
    <length>24</length>
    <type>Text</type>
</CustomField>