force-app/main/default/objects/Account/fields/Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Liabilities__c</fullName>
    <label>Total Liabilities</label>
    <length>24</length>
    <type>Text</type>
</CustomField>