force-app/main/default/objects/Account/recordTypes/Investors_Private_Equity_Firms.recordType-meta.xml
<RecordType>
    <fullName>Investors_Private_Equity_Firms</fullName>
    <active>true</active>
    <label>Investors / Private Equity Firms</label>
</RecordType>