force-app/main/default/objects/Account/recordTypes/MemberFirm.recordType-meta.xml
<RecordType>
    <fullName>MemberFirm</fullName>
    <active>true</active>
    <label>Member Firm</label>
</RecordType>