force-app/main/default/objects/Account/validationRules/Account_Name_Read_Only_for_Standard_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Read_Only_for_Standard_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Name),$Profile.Name&lt;&gt;&apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>Account Name is Not Editable</errorMessage>
</ValidationRule>