force-app/main/default/objects/Account/listViews/Chambers.listView-meta.xml
<ListView>
    <fullName>Chambers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Chambers</value>
    </filters>
    <label>Chambers</label>
</ListView>