force-app/main/default/objects/Account/listViews/Client_on_Monthly_basis.listView-meta.xml
<ListView>
    <fullName>Client_on_Monthly_basis</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:1</value>
    </filters>
    <label>This Month Clients</label>
</ListView>