force-app/main/default/objects/Account/listViews/Clients_created_on_this_Week.listView-meta.xml
<ListView>
    <fullName>Clients_created_on_this_Week</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week Clients</label>
</ListView>