force-app/main/default/objects/Account/listViews/Clients_Incorporated_in_last_1_year.listView-meta.xml
<ListView>
    <fullName>Clients_Incorporated_in_last_1_year</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <label>Clients Incorporated in last 1 year</label>
</ListView>