force-app/main/default/objects/Account/listViews/Grey_Listed_Clients.listView-meta.xml
<ListView>
    <fullName>Grey_Listed_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClientStatus__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Grey Listed Clients</label>
</ListView>