force-app/main/default/objects/Account/listViews/Investors_Private_Equity_Firms.listView-meta.xml
<ListView>
    <fullName>Investors_Private_Equity_Firms</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Investors_Private_Equity_Firms</value>
    </filters>
    <label>Investors/ Private Equity Firms</label>
</ListView>