force-app/main/default/objects/Account/listViews/Key_Clients.listView-meta.xml
<ListView>
    <fullName>Key_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>AccountType__c</columns>
    <columns>Sector__c</columns>
    <columns>CSL__c</columns>
    <columns>CoCSL__c</columns>
    <columns>NSL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <filters>
        <field>AccountType__c</field>
        <operation>equals</operation>
        <value>Key Account - CX,Key Account - GX</value>
    </filters>
    <label>Key Clients</label>
</ListView>